--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>bancaetapa</title>
+</head>
+<body>
+  <h1>Site da Banca de Jornal</h1>
+  <p>Site em construção.</p>
+</body>
+</html>
