--- a/index.html
+++ b/index.html
@@ -9,3 +9,14 @@
   <p>Site em construção.</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Site no ar</title>
+</head>
+<body>
+  <h1>Funcionou 🎉</h1>
+  <p>Meu site está no GitHub Pages.</p>
+</body>
+</html>
